[tool.poetry]
name = "leaflet-learninig"
version = "0.1.0"
description = ""
authors = ["FelipePy <felipespsampaiomotasp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
geotiff = "^0.2.10"
rasterio = "^1.4.1"
matplotlib = "^3.9.2"
geopandas = "^1.0.1"
xarray = "^2024.9.0"
netcdf4 = "^1.7.2"
h5netcdf = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
